gitops/platform/dashy/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashy
  namespace: dashy
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`start.__ZONE_NAME__`)
      services:
        - kind: Service
          name: dashy
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashy-wiredoor
  namespace: dashy
spec:
  entryPoints:
    - webwiredoor
  routes:
    - kind: Rule
      match: Host(`start.__ZONE_NAME__`)
      services:
        - kind: Service
          name: dashy
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashy-tailscale
  namespace: dashy
spec:
  entryPoints:
    - webtailscale
  routes:
    - kind: Rule
      match: Host(`start.__ZONE_NAME__`)
      services:
        - kind: Service
          name: dashy
          port: 80
  tls: {}
